[project]
name = "riemann"
version = "0.0.1"
description = "Experimental Imaginary"
authors = [{name = "Sakti Dwi Cahyono", email = "fsaktidc@icloud.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2.28,<5",
    "gunicorn>=23.0.0,<24",
    "uvicorn>=0.17.6,<1",
    "django-environ>=0.8.1,<1",
    "djangorestframework>=3.15.2,<4",
    "Markdown>=3.3.7,<4",
    "django-filter>=21.1,<22",
]

[project.urls]
Repository = "https://github.com/sakti/riemann"
Documentation = "https://sakti.github.io/riemann/"

[dependency-groups]
dev = [
    "black>=24.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "pytest>=7.1.1",
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.2.9",
    "mkdocstrings[python]>=0.18.1",
    "mypy>=0.942",
    "tox>=4",
    "tox-gh-actions>=3",
    "tox-uv>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"
exclude = [
    '\.venv',
    'tests'
]
